# ebraux_ocean4dvarnet

./: .gitignore  .pypirc  404.html  Makefile  README.md  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: README.md
.github/workflows/: docker-image.yml  release.yml  update-doc.yml
code-doc/data/: index.html
code-doc/evaluate/: index.html
code-doc/models/: index.html
code-doc/plot/: index.html
code-doc/process/: index.html
code-doc/train/: index.html
code-doc/utils/: index.html
concepts/: index.html
contributing/: index.html
contributing/code-quality/: index.html
contributing/dev-env-set-up/: index.html
contributing/documentation/: index.html
contributing/fork/: index.html
contributing/git-quicksheet/: index.html
contributing/guidelines/: index.html
contributing/pytorch-mamba-env/: index.html
contributing/testing/: index.html
contributing/workflow/: index.html
docker/cuda12.6.1-u22/: .dockerignore  Dockerfile  entrypoint.sh  tests.yml
docs/: concepts.md  contributing.md  index.md  installing.md  issues.md  related-projects.md
installing/: index.html
issues/: index.html
notebooks/: 4Dvarnet_analyse.ipynb
ocean4dvarnet/: __init__.py  data.py  models.py  train.py  utils.py
pylint_reports/: pylint_report_20250325-201922.json
related-projects/: index.html
scripts/: test_py_env.py
search/: search_index.json
stock/: code-of-conduct.md  contributing.md  documentation.md  github-actions.md  guidelines.md  pr-guidelines.md  testing.md
tests/: test_utils.py
(+21 files in other folders)
